# fowl-evil

./: CMakeLists.txt  Doxyfile  README.md
cmake/: FindSDL2_gfx.cmake
docs/: _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  _xulog_8h.html  _xulog_8h__dep__incl.map  _xulog_8h__dep__incl.md5  _xulog_8h__incl.map  _xulog_8h__incl.md5  _xulog_8h_source.html  animation_8hpp.html  animation_8hpp.js  animation_8hpp__incl.map  animation_8hpp__incl.md5  animation_8hpp_source.html  annotated.html  annotated_dup.js  atlas_8hpp.html  atlas_8hpp.js  atlas_8hpp__dep__incl.map  atlas_8hpp__dep__incl.md5  atlas_8hpp__incl.map  atlas_8hpp__incl.md5  atlas_8hpp_source.html  buffer_8hpp.html  buffer_8hpp__dep__incl.map  buffer_8hpp__dep__incl.md5  buffer_8hpp__incl.map  buffer_8hpp__incl.md5  buffer_8hpp_source.html  camera_8hpp.html  camera_8hpp__dep__incl.map  camera_8hpp__dep__incl.md5  camera_8hpp__incl.map  camera_8hpp__incl.md5  camera_8hpp_source.html  class_animation-members.html  class_animation.html  class_animation.js  class_animation__coll__graph.map  class_animation__coll__graph.md5  class_animation_a3ccf4d6fc7920710a79aff9639d67828_cgraph.map  (+336 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_4.js  classes_6.js  classes_a.js  classes_b.js  (+35 more)
include/: animation.hpp  atlas.hpp  camera.hpp  logger.hpp  timer.hpp  vector2.hpp
src/: main.cc
